# KanziEffects

./: .gitignore  README.md
Application/: CMakeLists.txt
Application/src/: kanzieffects.cpp
Tool_project/: KanziEffects.kzproj
Tool_project/Shaders/: CuteBend.frag.glsl  CuteBend.vert.glsl
